added form and tweaked app.js

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,6 +28,13 @@
             <input type="submit">
         </form>
         <br>
+
+        <form method="post" action="/courses/byKeyword">
+            Show Courses by Keyword: 
+            <input type="text" name="keyword" 
+                   placeholder="e.g. Python">
+            <input type="submit">
+        </form>
         <a href="/schedule/show">Show Schedule</a>
     <% } %>
 
