--- a/views/course.ejs
+++ b/views/course.ejs
@@ -1,4 +1,4 @@
-<div class="bg-light m-5 p-2 border border-primary border-2">
+<div class="bg-light m-5 p-2 border border-primary border-2 bg-secondary">
     <div class="">
         <span>
             <%= course.subject %> 
@@ -8,7 +8,7 @@
         <strong><%= course.name %></strong>
         
     </div>
-    <div class="mb-1">
+    <div class="mb-1 ">
         <%=course.instructor[0] %>
         <%=course.instructor[1] %>
         (<%=course.instructor[2] %>)
@@ -31,8 +31,9 @@
 </div>
 
 <hr>
-
+<div class = "bg-secondary>
 <pre>
     <%= JSON.stringify(course,null,5) %>
 </pre>
+</div>
 -->
