--- a/views/courselist.ejs
+++ b/views/courselist.ejs
@@ -1,7 +1,7 @@
 <h1>The courses are</h1>
 Here we want a ul list with the instructor, coursenum, title, term
 <hr>
-<table class="table table-bordered table-striped">
+<table class="table table-bordered table-striped bg-secondary text-center ">
     <thead>
         <tr>
             <th>Semester</th>
