--- a/views/toDo.ejs
+++ b/views/toDo.ejs
@@ -1,4 +1,4 @@
-    <div class="bg-light border border-primary p-3 rounded m-3">
+    <div class="bg-light border border-primary p-3 rounded m-3 bg-secondary text-center ">
         <h1 class="display-4 text-center">To Do List</h1>
         <p class="lead text-center"><%= items.length %>  items for <%= user['username'] %> to do</p>
     </div>
