--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,9 +1,11 @@
-
+<div class=" h-100 d-flex align-items-center justify-content-center">
 <h1>
   About -- Developers
 </h1>
+</div>
+<div class=" h-100 d-flex align-items-center justify-content-center">
 <ul>
-  <li>Tim Hickey</li>
-  <li>Jiaxin Li</li>
+  <li>Jalon Kimes</li>
+  <li>Fritz Duverglass</li>
 </ul>
-
+</div>
