--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -1,6 +1,6 @@
 <ul>
     <% for (course of courses){%>
-        <div class="d-flex flex-flow: row wrap text-center overflow-scroll ">
+        <div class="d-flex flex-flow: row wrap text-center overflow-scroll bg-secondary text-center ">
         
             <div class="p-3 m-3 border border-primary bg-light "><b>
             <a href="/schedule/remove/<%= course._id %>">X</a>
