--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -16,13 +16,13 @@
    <div class="container-fluid">
 
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-secondary bg-opacity-75">
+    <nav class="navbar navbar-expand-lg navbar-light text-dark bg-secondary bg-opacity-75">
         <a class="navbar-brand" href="/">CS103a Express App</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
       
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse text-dark" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
       
             <li class="nav-item ">
