--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -16,7 +16,7 @@
    <div class="container-fluid">
 
 
-    <nav class="navbar navbar-expand-lg navbar-light text-dark bg-secondary bg-opacity-75">
+    <nav class="navbar navbar-expand-lg navbar-light bg-secondary bg-opacity-75">
         <a class="navbar-brand" href="/">CS103a Express App</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
