--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
 
 
         <form method="post" action="/courses/byKeyword">
-            Show Courses by Keyword: 
+            Search Courses by Keyword: 
             <input type="text" name="keyword" 
                    placeholder="e.g. Python">
             <input type="submit">
